fixed the appearance of the h1 on mobile devices

--- a/src/pages/Main/main.module.scss
+++ b/src/pages/Main/main.module.scss
@@ -398,6 +398,11 @@
 }
 
 @media (max-width: 426px) {
+    .hero {
+        h1 {
+            font-size: $font-size-xxl;
+        }
+    }
     .projects {
         h3 {
             margin-bottom: $margin-title-mobile;
